--- a/front-end/src/app/suduku/suduku.component.scss
+++ b/front-end/src/app/suduku/suduku.component.scss
@@ -21,4 +21,8 @@ $sudokuBoxHeight: 50vh;
         width: 11%;
         height: $sudokuBoxHeight/9;
     }
+    .inputCell{
+        width: 90%;
+        height: 90%;
+    }
 }
