--- a/front-end/src/app/suduku/suduku.component.scss
+++ b/front-end/src/app/suduku/suduku.component.scss
@@ -12,6 +12,7 @@ $undecided : blue;
     .gameArea{
         width: 50%;
         min-width: 400px;
+        max-width: 700px;
         margin-bottom: 5%;
         background-color: white;
     }
