updated ui to show solution, added api to return list of sudokus

--- a/front-end/src/app/navbar/navbar.component.html
+++ b/front-end/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 <div class="topnav">
-    <a class="active" >Home</a>
-    <a >More Sodokus</a>
+    <a class="active"  routerLink="/">Home</a>
+    <a routerLink="/more_sudokus">More Sodokus</a>
 </div>
   
