--- a/front-end/src/app/suduku/suduku.component.html
+++ b/front-end/src/app/suduku/suduku.component.html
@@ -22,8 +22,8 @@
     <button mat-raised-button color="primary" (click)="validateCurrentProgress()">
         Validate Current Progress
     </button>
-    <button mat-raised-button color="accent" (click)="submitUserSolution()">
-        Submit Sudoku Solution
+    <button mat-raised-button color="accent" (click)="showSolution()">
+        Show Sudoku Solution
     </button>
 </div>
 
