updated front end

--- a/front-end/src/app/navbar/navbar.component.html
+++ b/front-end/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 <div class="topnav">
-    <a class="active"  routerLink="/">Home</a>
-    <a routerLink="/more_sudokus">More Sodokus</a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="/">Home</a>
+    <a routerLinkActive="active"  routerLink="/more_sudokus">More Sodokus</a>
 </div>
   
