--- a/front-end/src/app/suduku/suduku.component.html
+++ b/front-end/src/app/suduku/suduku.component.html
@@ -19,11 +19,16 @@
         </ng-container>
     </div>
     <p *ngIf="msg !=''" >{{msg}}</p>
-    <button mat-raised-button color="primary" (click)="validateCurrentProgress()">
-        Validate Current Progress
-    </button>
-    <button mat-raised-button color="accent" (click)="showSolution()">
-        Show Sudoku Solution
-    </button>
+    
+    <div>    
+        <button mat-raised-button color="primary" (click)="validateCurrentProgress()">
+            Validate Current Progress
+        </button>
+        &nbsp;
+        <button mat-raised-button color="accent" (click)="showSolution()">
+            Show Sudoku Solution
+        </button>
+    </div>
+
 </div>
 
